# tender_web_view

./: .replit  Welcome.py  app.py  pyproject.toml  test.py  utils.py
.streamlit/: config.toml
data/: chromadb_display.py  s3_connection.py  sample_tenders.py  tender_provider.py
pages/: Document Viewer.py  Tender Details.py  Welcome.py  document_viewer.py  tender_details.py  tenders.py  welcome.py
rag_pipeline/indexer/: indexing_pipeline.py
rag_pipeline/pipeline/: query_pipeline.py
