[project]
name = "tender-webdisplay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.37.26",
    "dotenv>=0.9.9",
    "pypdf2>=3.0.1",
    "streamlit>=1.44.1",
    "watchdog>=6.0.0",
    "pyarrow>=19.0.0",
    "haystack-ai>=2.13.2",
    "chroma-haystack>=3.1.0",
    "protobuf<=3.20.*",
    "pypdf>=5.5.0",
    "tqdm>=4.67.1",
]
